Bug 312690 - User-specified units are not respected in the Page Layout dialogue
Summary: User-specified units are not respected in the Page Layout dialogue
Status: RESOLVED FIXED
Alias: None
Product: karbon
Classification: Applications
Component: usability (other bugs)
Version First Reported In: 2.5.4
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Jan Hambrecht
URL:
Keywords:
Depends on:
Blocks: 312739
  Show dependency treegraph
 
Reported: 2013-01-05 15:59 UTC by Christopher Yeleighton
Modified: 2013-01-06 11:41 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.6
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christopher Yeleighton 2013-01-05 15:59:12 UTC
It seems to me that Karbon is designed to handle primarily page description documents, hence the page size is set in the Page Layout dialogue box.  When applied to SVG, however, this looks weird, as SVG images appear in all possible sizes and ratios in the wild (and they may contain interactive content which is not designed for printing at all).
Anyway, I was told that you can use the Page Layout dialogue box to set the preferred size of an SVG image.  So far, so good.  However, since this particular image is a user interface element, its dimensions should be expressed in pixels; but Karbon’s page size is hardwired to millimeters.  

Reproducible: Always

Steps to Reproduce:
  1. Tell Karbon to use pixels for measurement.
  2. Tell Karbon to use points for measurement.
  3. Tell Karbon to set page size.
Actual Results:  
  1. Oops, no way.
  3. Page size is in millimeters.

Expected Results:  
  3. Page size in points.
Comment 1 Friedrich W. H. Kossebau 2013-01-06 11:29:10 UTC
Git commit 9e4840df8d245b121fe276538b1eca9bab263483 by Friedrich W. H. Kossebau.
Committed on 06/01/2013 at 12:28.
Pushed by kossebau into branch 'master'.

Flow, Karbon, Stage and Sheets: use the currently set size units in the pagelayout dialog

Don't let Words be the only one to do it :)

REVIEW: 108221

thanks inge for review

M  +1    -0    karbon/ui/KarbonView.cpp
M  +1    -0    libs/kopageapp/dialogs/KoPAPageLayoutDialog.cpp
M  +1    -0    sheets/part/dialogs/PageLayoutDialog.cpp

http://commits.kde.org/calligra/9e4840df8d245b121fe276538b1eca9bab263483
Comment 2 Friedrich W. H. Kossebau 2013-01-06 11:30:31 UTC
Git commit aae2b3d28d80a10ce32f28e193e1866b04c4e131 by Friedrich W. H. Kossebau.
Committed on 06/01/2013 at 12:30.
Pushed by kossebau into branch 'calligra/2.6'.

Flow, Karbon, Stage and Sheets: use the currently set size units in the pagelayout dialog

Don't let Words be the only one to do it :)

REVIEW: 108221
FIXED-IN: 2.6

thanks inge for review

M  +1    -0    karbon/ui/KarbonView.cpp
M  +1    -0    libs/kopageapp/dialogs/KoPAPageLayoutDialog.cpp
M  +1    -0    sheets/part/dialogs/PageLayoutDialog.cpp

http://commits.kde.org/calligra/aae2b3d28d80a10ce32f28e193e1866b04c4e131