Flow, Karbon, Stage and Sheets: use the currently set size units in the pagelayout dialog

Don't let Words be the only one to do it :)

REVIEW: 108221
BUG: 312690

thanks inge for review